Fix some line spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -198,7 +198,6 @@ html {
   text-rendering: optimizeLegibility;
   text-align: center;
   background-color: #DCDCDC;
-  box-sizing: border-box;
 }
 
 label {
@@ -218,15 +217,16 @@ main{
 h1{
   padding: 36.674px 0;
   font-size: 75px;
+  line-height: 100px;
   color: #F8F8FF;
   font-family: 'Shadows Into Light', cursive;
-  margin-top: 22px;
-  margin-bottom: 22px;
+  margin: 22px;
   width: 80%;
 }
 
 p{
   font-size: 44px;
+  line-height: 60px;
   padding: 36.674px;
   font-family: 'Dosis', sans-serif;
   margin-top: 22px;
@@ -247,7 +247,6 @@ input{
 input[type=submit]{
   margin-top: 22px;
   border-radius: 5%;
-  border: dotted;
   font-size: 36.674px;
   background: #C0C0C0;
   color: #000000;
